--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint",
+  "name": "ajs-homeworks-workspace-eslint",
   "version": "1.0.0",
   "description": "",
   "main": "/src/app.js",
